pruned notes, fixed some outputs and layout issues

--- a/local/presentation.css
+++ b/local/presentation.css
@@ -13,7 +13,6 @@ button.worst-practice, button.academic, button.holy-war {
     box-shadow: 0 0 0;
     width: 64px;
     height: 64px;
-    display: none;
 }
 
 .tooltip-buttons {
